Closes Issue #29 Handle long state names by truncating name and applying ellipse to text-overflow.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,13 @@ body {
   box-shadow: 0px 0px 5px 0px #444;
 }
 
+.state-name{
+	max-width: 100px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+
 /*
 * Typeahead
 *
